# ATRI-bot

./: .gitignore  README.md  main.py  main_WebSocket_Client.py  main_http.py  main_server.py  main_servers.py  pyproject.toml  requirements.txt  run_SoVITS.bat  run_all.bat  run_atri.bat  run_atri.sh  test.py  草稿.py  返回值笔记.py
.github/: copilot-instructions.md
assets/: ATRI.db  PostgreSQL基础.sql  config - 副本.json  config copy.json  config.json  index.json  library.json  memory.json  sql转换.py  supplier.py  supplier_config copy.json  supplier_config.json  基础表结构.sql  如何配置配置文件.py
atri_head/: Message_processing.py  textMonitoring.py
atri_head/Basics/: AI_connection_manager.py  AI_interaction.py  Command_information.py  WebSocketClient.py  __init__.py  atri_Database.py  atri_async_Database.py  atri_config.py  chan_context.py  chance.py  command.py  exit_save.py  mcp_tool_manager.py  message_buffer_memory.py  permissions_management.py  qq_send_message.py  thread_management.py
atri_head/ImplementationCommand/: __init__.py  command_processor.py  simple_commands.py
atri_head/ai_chat/: api_key_bigModel.py  async_open_ai_api.py  async_open_ai_zpi.py  bigModel_api.py  chat_main.py  emoji_system.py  mcp_tool_manager.py  model_tools.py  open_ai.py  prepare_model_prompt.py  test_initiative_chat.py  universal_async_ai_api.py
atri_head/itemAction/: action_main.py
atri_head/triggerAction/: action_main.py  textMonitoring.py
atribot/: bot_framework.py  common.py
atribot/C/: Levenshtein.c  Levenshtein.pyi  install.sh  setup.py
atribot/LLMchat/: chat.py  (+5 more)
document/: code.py
(+185 files in other folders)
