[project]
name = "atri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "jieba>=0.42.1",
    "mcp>=1.12.2",
    "openai>=1.82.0",
    "pymilvus==2.6.0",
    "fastapi>=0.115.12",
]

[tool.uv.workspace]
members = [
    "abandoned/MCP_test/mcp-client",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
